fix: a large gap shows before the first section on first load

--- a/src/App.css
+++ b/src/App.css
@@ -137,7 +137,6 @@
 }
 
 section {
-  margin-top:55px ;
   height: 100vh;
   scroll-margin-top: 60px;
   padding-left: 15px;
